# xpe-desafio-modulo-1

./: .gitignore  README.md  example.env  interact_s3.py  pyproject.toml
architecture/: architecture.excalidraw
scripts/: config.py  interact_s3.py  job_spark_treat_rais.py
terraform/: emr.tf  example_tf.env  glue_crawler.tf  main.tf  s3.tf  vars.tf
tests/: test_interact_s3.py
