[tool.poetry]
name = "xpe-desafio-modulo-1"
version = "0.1.0"
description = ""
authors = ["Gabs <gabriel.okazaki@hotmail.com>"]
readme = "README.md"
packages = [{include = "xpe_desafio_modulo_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
boto3 = "^1.26.142"


[tool.poetry.group.dev.dependencies]
moto = {extras = ["s3"], version = "^4.1.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
